--- a/style.css
+++ b/style.css
@@ -7,32 +7,64 @@ body {
     color: #4c4c4c;
     background-size: cover;
     background: linear-gradient( to top,
-    white 75%,
+    white 82%,
     rgba(79, 105, 82, 0.5)),
     url("pexels-garrett-morrow-1638073.jpg");
+}
+h3 {
+    margin: 6vw;
 }
 h1 {
     font-family: 'Give You Glory';
     color: white;
     text-shadow: 0 4px 0 rgba(0,0,0, .4);
-    font-size: 160px;
-    margin-bottom: 20px;
+    font-size: 20vw;
+    margin-bottom: 2vw;
 }
 .banner {
     text-align: center;
     width: 100%;
 }
-header {
-    height: 1150px;
-}
 .dashboard {
     display: block;
-    width: 35vmax;
-    height: 35vmax;
-    background-color: white;
+    width: 90vw;
+    height: 90vw;
+    background-color: #525653;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin: auto;
-    padding-bottom: 100px;
+    border: 50px #525653 solid;
+    border-radius: 20px;
+    opacity: .8;
+}
+.button {
+    background-color: #539e66;
+    color: white;
+}
+form {
+    position: relative;
+    text-align: center;
+    margin: auto;
+}
+input {
+    position: relative;
+    width: 70vw;
+    font-size: 5vw;
+    padding: 3vw;
+    margin: 3.7vw;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.form-submit button {
+    color: white;
+    background-color: #4f724a;
+    width: 70vw;
+    font-size: 5vw;
+    padding: 3vw;
+    margin: 3.7vw;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 main {
     height: 100%;
@@ -43,7 +75,7 @@ main {
     display: block;
     text-align: center;
     margin: auto;
-    padding-top: 95px;
+    padding-top: 60px;
 }
 .main-content {
     position: relative;
@@ -52,6 +84,10 @@ main {
     width: 100%;
     height: 100%;
     padding-left: 20px;
+}
+h3 {
+    font-size: 8vw;
+    color: white;
 }
 h2 {
     color: black;
@@ -62,4 +98,41 @@ p {
     font-size: 70px;
     padding: 50px;
     margin: auto;
+}
+
+@media (orientation: landscape) {
+    body {
+        width: 100%;
+    }
+    h1 {
+        color: #4f724a;
+        text-shadow: 0 2px 1px rgba(48, 104, 73, 0.4);
+        font-size: 7vw;
+        line-height: 7vw;
+        padding:  2vw 3vw 0 4vw;
+        margin: 0 3vw 0 0;
+    }
+    .banner {
+        display: flex;
+        float: left;
+        width: 50%;
+        margin: 0;
+    }
+    .main-nav {
+        float: right;
+        display: flex;
+        padding: 0;
+        width: 40%;
+        margin: 0 auto 0 auto;
+    }
+    p {
+        float: right;
+        font-size: 3vw;
+        padding: 3vw;
+    }
+    header {
+        display: flex;
+        background-color: white;
+        width: 100%;
+    }
 }
