--- a/style.css
+++ b/style.css
@@ -1,29 +1,45 @@
 * {
     box-sizing: border-box;
 }
+
+/* General Styles */
 body {
     margin: 0;
     font-family: 'Raleway', sans-serif;
     color: #4c4c4c;
-    background-size: cover;
-    background: linear-gradient( to top,
-    white 82%,
-    rgba(79, 105, 82, 0.5)),
-    url("pexels-garrett-morrow-1638073.jpg");
 }
-h3 {
-    margin: 6vw;
+header {
+    border-bottom: 5px white solid;
 }
-h1 {
-    font-family: 'Give You Glory';
-    color: white;
-    text-shadow: 0 4px 0 rgba(0,0,0, .4);
-    font-size: 20vw;
-    margin-bottom: 2vw;
+main {
+    height: 100%;
+    padding-bottom: 100px;
+    position: relative;
+}
+form {
+    position: relative;
+    text-align: center;
+    margin: auto;
+}
+input {
+    position: relative;
+    width: 70vw;
+    font-size: 5vw;
+    padding: 4vw;
+    margin: auto;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .banner {
     text-align: center;
     width: 100%;
+    padding-top: 10vw;
+    background-size: cover;
+    background: linear-gradient(to bottom,
+    rgba(79, 105, 82, 0.5) 30%,
+    white),
+    url("pexels-garrett-morrow-1638073.jpg");
 }
 .dashboard {
     display: block;
@@ -40,65 +56,89 @@ h1 {
     background-color: #539e66;
     color: white;
 }
-form {
-    position: relative;
-    text-align: center;
-    margin: auto;
-}
-input {
-    position: relative;
-    width: 70vw;
-    font-size: 5vw;
-    padding: 3vw;
-    margin: 3.7vw;
-    border: none;
-    border-radius: 8px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+
 .form-submit button {
     color: white;
     background-color: #4f724a;
     width: 70vw;
     font-size: 5vw;
-    padding: 3vw;
-    margin: 3.7vw;
+    padding: 4vw;
+    margin: auto;
     border: none;
     border-radius: 8px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-main {
-    height: 100%;
-    padding-bottom: 100px;
-    position: relative;
+.submitItem, .form-submit {
+    margin-bottom: 5vw;
 }
-.main-nav {
-    display: block;
-    text-align: center;
+.search {
+    display: flex;
     margin: auto;
-    padding-top: 60px;
+    padding-bottom: 5vw;
 }
 .main-content {
     position: relative;
     background: white;
-    margin: none;
+    margin: 0;
     width: 100%;
     height: 100%;
     padding-left: 20px;
 }
-h3 {
-    font-size: 8vw;
+
+/* Typography */
+
+h1 {
+    font-family: 'Give You Glory';
     color: white;
+    text-shadow: 0 4px 0 rgba(0,0,0, .4);
+    font-size: 20vw;
+    margin-bottom: 2vw;
+    margin-top: 0;
 }
 h2 {
     color: black;
     font-size: 80px;
     display: block;
 }
-p {
-    font-size: 70px;
-    padding: 50px;
-    margin: auto;
+h3 {
+    margin: 6vw;
+    font-size: 8vw;
+    color: white;
 }
+p, a {
+    font-size: 7vw;
+    padding: 0;
+    margin: auto;
+    color: #525653;
+    text-decoration: none;
+}
+.banner: link {
+    font-family: 'Give You Glory';
+    color: white;
+    text-shadow: 0 4px 0 rgba(0,0,0, .4);
+    font-size: 20vw;
+    margin-bottom: 2vw;
+}
+
+/* Navigation */
+a:link {
+    color: #525653;
+}
+a:hover {
+    border-bottom: 3px solid red;
+}
+a:active {
+    color: #525653;
+}
+a:visited: {
+    color: #525653;
+}
+.main-nav {
+    display: flex;
+    width: 100%;
+    padding-top: 60px;
+}
+
 
 @media (orientation: landscape) {
     body {
@@ -125,7 +165,7 @@ p {
         width: 40%;
         margin: 0 auto 0 auto;
     }
-    p {
+    p, a {
         float: right;
         font-size: 3vw;
         padding: 3vw;
