rework submit page, add hover styles for buttons, add about page, add media queries for landscape orientation

--- a/style.css
+++ b/style.css
@@ -2,157 +2,30 @@
     box-sizing: border-box;
 }
 
-/* General Styles */
-body {
-    margin: 0;
-    font-family: 'Raleway', sans-serif;
-    color: #4c4c4c;
-}
-header {
-    border-bottom: 5px white solid;
-}
-main {
-    height: 100%;
-    padding-bottom: 100px;
-    position: relative;
-}
-form {
-    position: relative;
-    text-align: center;
-    margin: auto;
-}
-input {
-    position: relative;
-    width: 70vw;
-    font-size: 5vw;
-    padding: 4vw;
-    margin: auto;
-    border: none;
-    border-radius: 8px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.banner {
-    text-align: center;
-    width: 100%;
-    padding-top: 10vw;
-    background-size: cover;
-    background: linear-gradient(to bottom,
-    rgba(79, 105, 82, 0.5) 30%,
-    white),
-    url("pexels-garrett-morrow-1638073.jpg");
-}
-.dashboard {
-    display: block;
-    width: 90vw;
-    height: 90vw;
-    background-color: #525653;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: auto;
-    border: 50px #525653 solid;
-    border-radius: 20px;
-    opacity: .8;
-}
-.button {
-    background-color: #539e66;
-    color: white;
-}
-
-.form-submit button {
-    color: white;
-    background-color: #4f724a;
-    width: 70vw;
-    font-size: 5vw;
-    padding: 4vw;
-    margin: auto;
-    border: none;
-    border-radius: 8px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.submitItem, .form-submit {
-    margin-bottom: 5vw;
-}
-.search {
-    display: flex;
-    margin: auto;
-    padding-bottom: 5vw;
-}
-.main-content {
-    position: relative;
-    background: white;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    padding-left: 20px;
-}
-
-/* Typography */
-
-h1 {
-    font-family: 'Give You Glory';
-    color: white;
-    text-shadow: 0 4px 0 rgba(0,0,0, .4);
-    font-size: 20vw;
-    margin-bottom: 2vw;
-    margin-top: 0;
-}
-h2 {
-    color: black;
-    font-size: 80px;
-    display: block;
-}
-h3 {
-    margin: 6vw;
-    font-size: 8vw;
-    color: white;
-}
-p, a {
-    font-size: 7vw;
-    padding: 0;
-    margin: auto;
-    color: #525653;
-    text-decoration: none;
-}
-.banner: link {
-    font-family: 'Give You Glory';
-    color: white;
-    text-shadow: 0 4px 0 rgba(0,0,0, .4);
-    font-size: 20vw;
-    margin-bottom: 2vw;
-}
-
-/* Navigation */
-a:link {
-    color: #525653;
-}
-a:hover {
-    border-bottom: 3px solid red;
-}
-a:active {
-    color: #525653;
-}
-a:visited: {
-    color: #525653;
-}
-.main-nav {
-    display: flex;
-    width: 100%;
-    padding-top: 60px;
-}
-
 
 @media (orientation: landscape) {
     body {
-        width: 100%;
+        width: 90%;
+        margin: auto;
     }
     h1 {
+        font-family: 'Fredoka One', cursive;
         color: #4f724a;
         text-shadow: 0 2px 1px rgba(48, 104, 73, 0.4);
         font-size: 7vw;
         line-height: 7vw;
-        padding:  2vw 3vw 0 4vw;
+        padding:  2vw 3vw 0 2.2vw;
         margin: 0 3vw 0 0;
     }
+    h2 {
+        font-size: 5vw;
+    }
+    .requestHeader {
+        padding: 0 0 2vw 0;
+    }
     .banner {
+        background: white;
+        padding-top: 0;
         display: flex;
         float: left;
         width: 50%;
@@ -163,16 +36,270 @@ a:visited: {
         display: flex;
         padding: 0;
         width: 40%;
-        margin: 0 auto 0 auto;
+        margin: 0 0 0 auto;
+    }
+    #sub-button:hover {
+        background: rgb(238, 143, 89);
+    }
+    a {
+        color: #4f724a;
+        padding: 1.5vw 2vw 0 0;
+    }
+    a:hover {
+        text-decoration: none;
+        color: rgb(238, 143, 89);
     }
     p, a {
+        font-family: 'Raleway', sans-serif;
         float: right;
         font-size: 3vw;
-        padding: 3vw;
     }
     header {
         display: flex;
-        background-color: white;
+        background: white;
         width: 100%;
     }
 }
+
+@media (min-width: 850px), (orientation: landscape) {
+    form {
+        padding: 4vw;
+    }
+    h1 {
+        font-family: 'Fredoka One', cursive;
+        font-size: 4vw;
+        padding-top: 0;
+    }
+    h2 {
+        font-family: 'Raleway', sans-serif;
+        color: grey;
+        font-size: 80px;
+    }
+    h3 {
+        font-family: 'Raleway', sans-serif;
+        color: grey;
+        font-size: 20pt;
+        margin: 0;
+        padding-bottom: 2vw;
+    }
+    a:hover {
+        text-decoration: none;
+        color: rgb(238, 143, 89);
+    }
+    .dashboard {
+        display: inline-block;
+        background: white;
+        height: 20vw;
+        width: 100%;
+        margin: auto;
+        border: none;
+    }
+    .button {
+        font-family: 'Raleway', sans-serif;
+        background-color: #539e66;
+        color: white;
+    }
+    
+    .requestHeader {
+        padding: 0 0 2vw 0;
+    }
+    form {
+        text-align: center;
+    }
+    input {
+        display: inline-flex;
+        width: 20vw;
+        font-family: 'Raleway', sans-serif;
+        font-size: 18pt;
+        text-align: center;
+        color: grey;
+        background: rgb(215, 224, 216);
+        padding: 10px;
+        margin: auto;
+        border: none;
+        border-radius: 8px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    .form-submit button {
+        color: white;
+        background-color: #4f724a;
+        width: 20vw;
+        font-family: 'Raleway', sans-serif;
+        font-size: 18pt;
+        padding: 10px;
+        margin: auto;
+        border: none;
+        border-radius: 8px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    #sub-button:hover {
+        background: rgb(238, 143, 89);
+    }
+    .submitItem {
+        margin: 0;
+        padding: 0 1vw 0 1vw;
+        display: inline;
+    }
+    .notes {
+        padding: 2vw 0 0 0;
+        display: flex;
+        margin: auto;
+    }
+    .form-submit {
+        margin-bottom: 0;
+        padding: 2vw 0 0 0;
+        display: block;
+    }
+}
+
+
+/* General Styles */
+@media (max-width: 849px), (orientation: portrait) {
+    body {
+        margin: 0;
+        color: #4c4c4c;
+    }
+    header {
+        border-bottom: 5px white solid;
+        background: white;
+    }
+    main {
+        height: 100%;
+        padding-bottom: 100px;
+        position: relative;
+    }
+    form {
+        position: relative;
+        text-align: center;
+        margin: auto;
+    }
+    input {
+        position: relative;
+        width: 70vw;
+        font-family: 'Raleway', sans-serif;
+        font-size: 5vw;
+        padding: 4vw;
+        margin-bottom: 4vw;
+        border: none;
+        border-radius: 8px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    .banner {
+        text-align: center;
+        width: 100%;
+        padding-top: 10vw;
+        background-size: cover;
+        background: linear-gradient(to bottom,
+        rgba(79, 105, 82, 0.5) 30%,
+        white),
+        url("pexels-garrett-morrow-1638073.jpg");
+    }
+    .dashboard {
+        display: block;
+        width: 90vw;
+        height: 90vw;
+        margin: auto;
+        margin-top: 2vw;
+        border-radius: 20px;
+        opacity: .8;
+    }
+    .requestHeader {
+        padding: 0 0 2vw 0;
+    }
+    .button {
+        font-family: 'Raleway', sans-serif;
+        background-color: #539e66;
+        color: white;
+    }
+    
+    .form-submit button {
+        color: white;
+        background-color: #4f724a;
+        width: 70vw;
+        font-size: 5vw;
+        padding: 4vw;
+        margin: auto;
+        border: none;
+        border-radius: 8px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    #sub-button:hover {
+        background: rgb(238, 143, 89);
+    }
+    .submitItem, .form-submit, .notes {
+        margin-bottom: 5vw;
+        padding: 0 0 0 0;
+    }
+    .search {
+        display: flex;
+        margin: auto;
+        padding-bottom: 5vw;
+    }
+    .notes {
+        display: flex;
+    }
+    .main-content {
+        position: relative;
+        background: white;
+        margin: 0;
+        width: 100%;
+        height: 100%;
+        padding-left: 20px;
+    }
+
+    /* Typography */
+
+    h1 {
+        font-family: 'Fredoka One', cursive;
+        color: white;
+        text-shadow: 0 4px 0 rgba(0,0,0, .4);
+        font-size: 20vw;
+        padding-bottom: 7vw;
+        margin-top: 0;
+    }
+    h2 {
+        font-family: 'Raleway', sans-serif;
+        color: grey;
+        font-size: 80px;
+    }
+    h3 {
+        font-family: 'Raleway', sans-serif;
+        margin: 0;
+        font-size: 6vw;
+        color: white;
+    }
+    p, a {
+        font-family: 'Raleway', sans-serif;
+        font-size: 7vw;
+        padding: 0;
+        margin: auto;
+        color: #525653;
+        text-decoration: none;
+    }
+    .banner:link {
+        font-family: 'Fredoka One', cursive;
+        color: white;
+        text-shadow: 0 4px 0 rgba(0,0,0, .4);
+        font-size: 20vw;
+        margin-bottom: 2vw;
+    }
+
+    /* Navigation */
+    a:link {
+        color: #525653;
+    }
+    a:hover {
+        text-decoration: none;
+        color: rgb(238, 143, 89);
+    }
+    a:hover {
+        text-decoration: none;
+        color: rgb(238, 143, 89);
+    }
+    .main-nav {
+        display: flex;
+        width: 100%;
+        padding-top: 60px;
+    }
+}
+
