--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@
         text-decoration: none;
         color: rgb(238, 143, 89);
     }
+    .main-content {
+        width: 65%;
+        padding-top: 2vw;
+        margin: auto;
+        justify-content: center;
+    }
     .dashboard {
         display: inline-block;
         background: white;
@@ -204,7 +210,7 @@
         opacity: .8;
     }
     .requestHeader {
-        padding: 0 0 2vw 0;
+        padding: 0 0 4vw 0;
     }
     .button {
         font-family: 'Raleway', sans-serif;
@@ -242,8 +248,7 @@
         position: relative;
         background: white;
         margin: 0;
-        width: 100%;
-        height: 100%;
+        width: 90%;
         padding-left: 20px;
     }
 
