--- a/style.css
+++ b/style.css
@@ -26,29 +26,20 @@
     to {transform:scale(1)}
 }
 
-
 /* Sidebar menu */
 .sidebar {
     height: 100%;
     width: 0; /* Change width with javascript function in script.js */
     position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
     background-color: #111;
     overflow-x: hidden;
     transition: 0.5s;
   }
   
   .sidebar a {
-    padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
     color: #818181;
-    display: block;
-    width: 100%;
     transition: 0.2s;
-    float: right;
   }
   
   .sidebar a:hover {
@@ -60,6 +51,7 @@
     width: 100%;
     text-align: right;
     padding-right: 32px;
+    padding-top: 18px;
   }
   
   .openbtn {
@@ -75,10 +67,6 @@
     color: rgb(238, 143, 89);
   }
   
-  #main {
-    transition: margin-left .5s;
-    padding: 20px;
-  }
   
 
 /* Landscape Large */
@@ -314,11 +302,64 @@
         display: flex;
         background: white;
     }
+    .sidebar {
+        height: 100%;
+        width: 0; /* Change width with javascript function in script.js */
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        transition: 0.5s;
+      }
+      
+      .sidebar a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        width: 100%;
+        transition: 0.2s;
+        float: right;
+      }
+      
+      .sidebar a:hover {
+        color: #f1f1f1;
+      }
+      
+      .sidebar .closebtn {
+        display: inline;
+        width: 100%;
+        text-align: right;
+        font-size: 50px;
+        padding-right: 32px;
+        padding-top: 18px;
+      }
+      
+      .openbtn {
+        font-size: 3vw;
+        cursor: pointer;
+        background-color: white;
+        color: #539e66;
+        border: none;
+        float: right;
+      }
+      
+      .openbtn:hover {
+        color: rgb(238, 143, 89);
+      }
+      
+      #main {
+        transition: margin-left .5s;
+        padding: 20px;
+      }
     
 }
 
 /* Mobile First Portrait */
-@media (max-width: 849px), (orientation: portrait) {
+@media (orientation: portrait) {
     body {
         margin: 0;
         color: #4c4c4c;
@@ -429,11 +470,6 @@
         margin-bottom: 1vw;
         padding: 0 0 0 0;
     }
-    .search {
-        display: flex;
-        margin: auto;
-        padding-bottom: 5vw;
-    }
     .main-content {
         position: relative;
         background: white;
@@ -494,6 +530,7 @@
         border: none;
         color: rgb(238, 143, 89);
     }
+
     /* Navigation */
     a:link {
         color: #525653;
@@ -511,6 +548,31 @@
         width: 100%;
         padding-top: 60px;
     }
+    .sidebar {
+        height: 0; /* Change height with javacsript function */
+        width: 100%;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow-y: hidden;
+        transition: 0.5s;
+      }
+      .sidebar a {
+        text-decoration: none;
+        color: #818181;
+        float: left;
+        transition: 0.2s;
+        padding: 0 3vw 3vw 3vw;
+        width: 25%;
+        margin: auto;
+        text-align: center;
+      }
+      #main {
+        transition: margin-top .5s;
+        padding: 20px;
+      }
     /* Modal */
     ul {
         list-style-type: none;
